Purge PassRefPtr from TouchList https://bugs.webkit.org/show_bug.cgi?id=157985

Patch by Nael Ouedraogo <nael.ouedraogo@crf.canon.fr> on 2016-05-25
Reviewed by Darin Adler.

Use RefPtr&& argument instead of PassRefPtr in append()

* dom/TouchList.h:
(WebCore::TouchList::append):
* page/EventHandler.cpp:
(WebCore::EventHandler::handleTouchEvent):

Canonical link: https://commits.webkit.org/176181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201377 268f45cc-cd09-0410-ab3c-d52691b4dbfc